src/styles.css
.nav {
  --main-color: #333333;
  --background-color: #ffffff;
  --menu-bg-color: #f9f9f9;
  --height: 55px;
  --slider-width: 100%;

  display: grid;
  grid-template-columns: minmax(min-content, max-content) auto;
  align-items: center;
  background-color: var(--background-color);
  font-family: inherit;
  height: var(--height);
  padding: 0 2em;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.07);
  box-sizing: border-box;
  z-index: 2;
}

.navAnimate {
  composes: nav;

  transition: top 200ms ease-in;
}

.nav *,
.navAnimate * {
  outline-width: 1px;
  outline-color: var(--main-color);
}

.nav > a:first-child,
.navAnimate > a:first-child {
  text-decoration: none;
  font-size: 1.5em;
  color: var(--main-color);
  margin-right: 1em;
}

.navHidden {
  composes: nav;

  top: calc(var(--height) * -1);
}

.navAnimateHidden {
  composes: navHidden;

  transition: top 300ms ease-out;
}

@media (max-width: 768px) {
  .nav,
  .navAnimate {
    justify-content: space-between;
  }

  .nav > a:first-child,
  .navAnimate > a:first-child {
    margin-right: 0;
  }
}

